@@ -10,7 +10,25 @@ COPY src ./src
 RUN gradle build --no-daemon
 
 # Run stage
-FROM openjdk:17-jre-slim
+# Example of custom Java runtime using jlink in a multi-stage container build
+FROM eclipse-temurin:21 as jre-build
+
+# Create a custom Java runtime
+RUN $JAVA_HOME/bin/jlink \
+         --add-modules java.base \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /javaruntime
+
+# Define your base image
+FROM debian:buster-slim
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
+COPY --from=jre-build /javaruntime $JAVA_HOME
+
+# Continue with your application deployment
 
 WORKDIR /app
 
